# ros2_benchmark

./: .gitattributes  README.md
assets/configs/: realsense.yaml
resources/patch/: resize_qos_profile.patch
results/: apriltag_ros_apriltag_graph-agx_orin.json  apriltag_ros_apriltag_graph-agx_thor.json  apriltag_ros_apriltag_graph-agx_xavier.json  apriltag_ros_apriltag_graph-nuc_3060ti.json  apriltag_ros_apriltag_graph-nuc_4060ti.json  apriltag_ros_apriltag_graph-orin_nx.json  apriltag_ros_apriltag_graph-x86-4090.json  apriltag_ros_apriltag_graph-x86-5090.json  apriltag_ros_apriltag_graph-x86_4090.json  apriltag_ros_apriltag_graph-x86_64_rtx_3060Ti.json  apriltag_ros_apriltag_graph-x86_64_rtx_4090.json  apriltag_ros_apriltag_node-agx_orin.json  apriltag_ros_apriltag_node-agx_thor.json  apriltag_ros_apriltag_node-agx_xavier.json  apriltag_ros_apriltag_node-nuc_3060ti.json  apriltag_ros_apriltag_node-nuc_4060ti.json  apriltag_ros_apriltag_node-orin_nx.json  apriltag_ros_apriltag_node-x86-4090.json  apriltag_ros_apriltag_node-x86-5090.json  apriltag_ros_apriltag_node-x86_4090.json  apriltag_ros_apriltag_node-x86_64_rtx_3060Ti.json  apriltag_ros_apriltag_node-x86_64_rtx_4090.json  image_proc_rectify_node-agx_orin.json  image_proc_rectify_node-agx_thor.json  image_proc_rectify_node-agx_xavier.json  image_proc_rectify_node-nuc_3060ti.json  image_proc_rectify_node-nuc_4060ti.json  image_proc_rectify_node-orin_nx.json  image_proc_rectify_node-x86-4090.json  image_proc_rectify_node-x86-5090.json  image_proc_rectify_node-x86_4090.json  image_proc_rectify_node-x86_64_rtx_3060Ti.json  image_proc_rectify_node-x86_64_rtx_4090.json  image_transport_h264_decoder_node-agx_orin.json  image_transport_h264_decoder_node-agx_xavier.json  image_transport_h264_decoder_node-nuc_3060ti.json  image_transport_h264_decoder_node-nuc_4060ti.json  image_transport_h264_decoder_node-orin_nx.json  image_transport_h264_decoder_node-x86_4090.json  image_transport_h264_decoder_node-x86_64_rtx_3060Ti.json  (+37 more)
ros2_benchmark/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_benchmark/bazel_config/: default_ros2_benchmark_config.yaml
ros2_benchmark/include/ros2_benchmark/: common.hpp  data_loader_node.hpp  monitor_node.hpp  playback_node.hpp
ros2_benchmark/ros2_benchmark/: __init__.py  basic_performance_calculator.py  default_ros2_benchmark_config.yaml  ros2_benchmark_config.py  ros2_benchmark_test.py
ros2_benchmark/ros2_benchmark/utils/: cpu_profiler.py  generic_profiler.py  image_utility.py  nsys_utility.py  nvidia_smi_profiler.py  profiler.py  resource_metrics.py  ros2_utility.py  tegrastats_profiler.py  x86_profiler.py
ros2_benchmark/scripts/: apriltag_ros_apriltag_graph.py  apriltag_ros_apriltag_node.py  image_proc_rectify_node.py  realsense2_node.py  stereo_image_proc_graph.py  stereo_image_proc_node.py
ros2_benchmark/src/: data_loader_node.cpp  monitor_node.cpp  playback_node.cpp
ros2_benchmark/test/: benchmark_pol.py  data_loader_node_pol.py  monitor_node_pol.py  playback_node_pol.py
ros2_benchmark/test/pol.bag/: metadata.yaml  pol.bag_0.db3
ros2_benchmark_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_benchmark_interfaces/msg/: TimestampedMessageArray.msg  TopicMessageCount.msg  TopicMessageTimestampArray.msg
ros2_benchmark_interfaces/srv/: GetTopicMessageTimestamps.srv  PlayMessages.srv  SetData.srv  StartLoading.srv  StartMonitoring.srv  StartRecording.srv  StopLoading.srv  StopMonitoring.srv  StopRecording.srv
scripts/: apriltag_ros_apriltag_graph.py  apriltag_ros_apriltag_node.py  image_proc_rectify_node.py  image_transport_h264_decoder_node.py  image_transport_h264_encoder_node.py  realsense2_node.py  stereo_image_proc_graph.py  stereo_image_proc_node.py
scripts/city_segformer/: image_segmentation_ros_node_city_segformer.py  tutorial-city-segformer.md
